<resources>
    <string name="app_name">ML_Kit_Text_Recognition</string>
    <string name="takeImageInfo">Take as many images of the Menu laying in front of you as you want. Then you can choose them one by one for dishes classification.</string>
    <string name="takeImageButton">Take Images</string>
    <string name="importImageButton">Import Images</string>
    <string name="importImageInfo">Choose as many images from your photos library as you want. Then you can choose them one by one for dishes classification.</string>
    <string name="chooseTitle">Which way do you want to add photos?</string>
    <string name="optionA">Option A</string>
    <string name="option_b">Option B</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="shuffle">Switch</string>
    <string name="import_btn">Import</string>
    <string name="take_btn">Take</string>
    <string name="menuTitle">MENU</string>
    <string name="add_product">Add Product</string>
    <string name="productTitle">PRODUCT</string>
</resources>