<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ImportScreen">

        <TextView
            android:id="@+id/recognizedText"
            android:layout_width="578dp"
            android:layout_height="879dp"
            android:background="@color/white"
            android:text="text"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.267" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="150sp"
            android:layout_height="60sp"
            android:background="@drawable/buttonmenu"
            android:fontFamily="@font/pixelcalculation"
            android:text="@string/import_btn"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

        <Button
            android:id="@+id/buttonSwitch"
            android:layout_width="150sp"
            android:layout_height="60sp"
            android:background="@drawable/buttonmenu"
            android:fontFamily="@font/pixelcalculation"
            android:text="@string/shuffle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="300sp"
            android:layout_height="60sp"
            android:background="@drawable/buttonmenu"
            android:fontFamily="@font/pixelcalculation"
            android:text="@string/add_restaurant"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.726"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="581dp"
            android:layout_height="889dp"
            android:visibility="invisible"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.256"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
